Added ex and lectures

--- a/proteins/_posts/2023-08-03-lesson6.md
+++ b/proteins/_posts/2023-08-03-lesson6.md
@@ -31,7 +31,8 @@ invert_sidebar: true
 
 ### [Slides](/assets/slides/06_Structure_prediction.pdf)
 
-#### Video will come as soon as the lecture happens!
+#### Video
+<iframe width="560" height="315" src="https://www.youtube.com/embed/8DqeXxkASzM?si=Z-mGRDnATjqNt6Ux" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 ## Credits
 
