--- a/proteins/_posts/2023-08-04-lesson7.md
+++ b/proteins/_posts/2023-08-04-lesson7.md
@@ -29,7 +29,9 @@ invert_sidebar: true
 
 ### [Slides](/assets/slides/07_generative_modelling.pdf)
 
-#### Video will come as soon as the lecture happens!
+#### Video
+<iframe width="560" height="315" src="https://www.youtube.com/embed/IaiUPxDRcBo?si=ddEvbsiDUpME02B-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
 ## Credits
 
 The image was taken from the [Stable Diffusion repository](https://github.com/Stability-AI/stablediffusion/blob/main/assets/stable-samples/txt2img/768/merged-0002.png) by StabilityAI.
