--- a/proteins/_posts/2023-08-06-lesson9.md
+++ b/proteins/_posts/2023-08-06-lesson9.md
@@ -16,14 +16,16 @@ invert_sidebar: true
 
 ### Required reading for this lesson
 - [Textbook Chapter on Molecular Dynamics](https://arxiv.org/abs/2307.02176)
-
-
+- [A pre-exercise sheet from Tobias as a preparationf or the lecture](/assets/slides/09_pre_exercise.pdf)
 
 ### Optional reading for this lesson
 - [Textbook Chapter on Monte Carlos for Protein Structures, good addition to chapter on Molecular Dynamics](http://arxiv.org/abs/2307.02177)
 
+This week we have a guest speaker joining us: Tobias Dorer, student at the Max Planck School "Matter to Life", worked with various groups on simulations, ranging from theoretical chemistry to biomolecular dynamics. In this lecture he will give you an overview of the different types of simulations and how they can be used to understand protein structure and function. Let's jump in!
+
 ### [Slides](/assets/slides/09_simulations.pdf)
 
-#### Video will come as soon as the lecture happens!
+#### Video
+<iframe width="560" height="315" src="https://www.youtube.com/embed/68hpS1DHB9Q?si=MKdfHnkJcwSC_zoI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 *[SERP]: Search Engine Results Page
