--- a/proteins/_posts/2023-08-08-lesson10.md
+++ b/proteins/_posts/2023-08-08-lesson10.md
@@ -26,7 +26,8 @@ This week we have a guest speaker joining us: [Charlie Harris](https://cch1999.g
 
 ### [Slides](/assets/slides/10_drug_design.pdf)
 
-#### Video will come as soon as the lecture happens!
+#### Video
+<iframe width="560" height="315" src="https://www.youtube.com/embed/a8sn4hElf80?si=uZ1OC5upbTgHA4zY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 
 *[SERP]: Search Engine Results Page
