--- a/proteins/_posts/2023-08-02-lesson5.md
+++ b/proteins/_posts/2023-08-02-lesson5.md
@@ -36,7 +36,8 @@ With that out of the way, let's dive right in!
 
 ### [Slides](/assets/slides/05_GNNs.pdf)
 
-#### Video will come as soon as the lecture happens!
+#### Video
+<iframe width="560" height="315" src="https://www.youtube.com/embed/hYlIG0SuipA?si=z9cL5wb7183z5Rqe" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 ### Credits
 
