--- a/proteins/_posts/2023-08-05-lesson8.md
+++ b/proteins/_posts/2023-08-05-lesson8.md
@@ -28,7 +28,9 @@ invert_sidebar: true
 
 ### [Slides](/assets/slides/08_protein_design.pdf)
 
-#### Video will come as soon as the lecture happens!
+#### Video
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/2BKQbOgYrPk?si=Hoq07c9aQHBBlZuj" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 
 *[SERP]: Search Engine Results Page
