--- a/proteins/_posts/2023-08-10-lesson11.md
+++ b/proteins/_posts/2023-08-10-lesson11.md
@@ -14,16 +14,27 @@ invert_sidebar: true
 
 # Lesson 11 - Further topics and conclusion
 
-### Required reading for this lesson
-- In this lesson we will talk about topics you want to hear more about or are specifically interested in, as well as some things we did not get to talk about during the course!
-
 ### Optional reading for this lesson
-- In this lesson we will talk about topics you want to hear more about or are specifically interested in, as well as some things we did not get to talk about during the course!
+- [Brady Johnston: Blender for Biochemists Tutorials](https://www.youtube.com/watch?v=CfkjBoOaw0g&list=PLQyfz7398elUxrY_5NbqvN0ve7hqlz_mW)
+- [Tanja Kortemme: De novo protein design](https://www.sciencedirect.com/science/article/pii/S0092867423014022)
+- [Biioinformatics Algorithms: Understanding Multiple Sequence Alignments](https://www.youtube.com/watch?v=slUaVeNvuTk&list=PLQ-85lQlPqFNmbPEsMoxb5dM5qtRaVShn)
+- [DIY Transcriptomics](https://diytranscriptomics.com/)
 
 
-### Slides will come at the end of this course for this lecture
+The idea for this lesson is to give you a taste of what else is out there. We have covered a lot of ground in this course, but there is still so much more to learn. Here are a few topics that you might find interesting and look at during this week's exercise:
 
-#### Video will come as soon as the lecture happens!
+## 1. Visualization for structural biology
+
+
+## 2. New advances in de novo protein design
+
+
+## 3. Sequence bioinformatics
+
+
+## 4. Omics data analysis
+
+
 
 
 *[SERP]: Search Engine Results Page
